tests/baselines/reference/jsdocTypeFromChainedAssignment.errors.txt
a.js(12,21): error TS2339: Property 'x' does not exist on type 'typeof A'.
a.js(15,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
a.js(16,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
a.js(17,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
a.js(18,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
a.js(19,1): error TS2322: Type '10' is not assignable to type '1'.


==== a.js (6 errors) ====
    function A () {
        this.x = 1
        /** @type {1} */
        this.first = this.second = 1
    }
    /** @param {number} n */
    A.prototype.y = A.prototype.z = function f(n) {
        return n + this.x
    }
    /** @param {number} m */
    A.s = A.t = function g(m) {
        return m + this.x
                        ~
!!! error TS2339: Property 'x' does not exist on type 'typeof A'.
    }
    var a = new A()
    a.y('no') // error
        ~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    a.z('not really') // error
        ~~~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    A.s('still no') // error
        ~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    A.t('not here either') // error
        ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    a.first = 10 // error: '10' isn't assignable to '1'
    ~~~~~~~
!!! error TS2322: Type '10' is not assignable to type '1'.
    